--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@graphql-codegen/typescript-resolvers": "^1.17.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "fp-ts": "^2.8.2",
     "graphql": "^14.0.0",
     "lerna": "^3.15.0",
+    "io-ts": "^2.2.10",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "tsdx": "^0.13.2",
-    "typescript": "^3.9.7",
-    "zod": "^1.11.0-alpha.6"
+    "typescript": "^3.9.7"
   },
   "workspaces": [
     "packages/*"
