--- a/packages/graphql-api/package.json
+++ b/packages/graphql-api/package.json
@@ -29,8 +29,10 @@
     "@mono/resolver-typedefs": "^0.0.0",
     "@mono/validations-api": "^0.0.0",
     "@mono/validations-common": "^0.0.0",
+    "@types/graphlib": "^2.1.7",
     "apollo-server": "^2.16.0",
     "esm": "^3.2.25",
+    "graphlib": "^2.1.8",
     "graphql": "^14.0.0",
     "tslib": "^2.0.0",
     "ts-node": "^8.10.2",
