--- a/codegen.yml
+++ b/codegen.yml
@@ -4,7 +4,9 @@ generates:
     plugins:
       - typescript
       - typescript-resolvers
-  packages/react/src/__generated__/types.tsx:
+  packages/frontend/src/__generated__/types.tsx:
+    documents:
+      - "./packages/frontend/src/**/*.tsx"
     plugins:
       - typescript
       - typescript-operations
@@ -13,3 +15,4 @@ hooks:
     - prettier --write
 config:
   constEnums: false
+  globalNamespace: true
